created addListItem() in IIFE, added an event listener to each button, updated UI
Replaced the document.write(...) with functions like createElement() and appendChild(), added classes by using classList functions to create a list of items: <li></li>. Each one of these list items holds a <button></button> element with a Pokémon's name as its inner text.

Updated UI and build an interface showing a list of all your Pokémon, and when you click on one of them, the console logs its name.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <title>Simple JS App</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
+
   <body>
+    <div class="pokedex_container">
+      <h1>Pokedex</h1>
+      <ul class="pokemon-list"></ul>
+    </div>
+    <!-- adds another Container to test if flex is working -->
+    <div class="pokedex_container">
+      <h1>2nd Pokedex for Flex-Test</h1>
+    </div>
+
     <script src="js/scripts.js"></script>
   </body>
 </html>
