replaced static list with complete list of Pokémon loaded from Pokémon API

--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
       <h1>Pokedex</h1>
       <ul class="pokemon-list"></ul>
     </div>
-    <!-- adds another Container to test if flex is working -->
-    <div class="pokedex_container">
-      <h1>2nd Pokedex for Flex-Test</h1>
-    </div>
-
+    
+    <script src="js/promise-polyfill.js"></script>
+    <script src="js/fetch.umd.js"></script>
     <script src="js/scripts.js"></script>
   </body>
 </html>
