implement modal as a details view for each Pokémon in list, updated css with grid

--- a/index.html
+++ b/index.html
@@ -8,13 +8,27 @@
   </head>
 
   <body>
-    <div class="pokedex_container">
+    <!-- Navigation List / Header -->
+    <nav class="header">
+      <!-- Nav bar will be updated later on
+        <img class="pokedex-logo" src="img/pokeball.png" height="100">
+      -->
       <h1>Pokedex</h1>
+    </nav>
+
+    <!-- Pokedex -->
+    <div class="pokedex_container">
       <ul class="pokemon-list"></ul>
     </div>
+    <!-- Modal -->
+    <div id="modal-container"></div>
     
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch.umd.js"></script>
     <script src="js/scripts.js"></script>
   </body>
 </html>
+
+
+
+
