--- a/index.html
+++ b/index.html
@@ -3,28 +3,88 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <title>Simple JS App</title>
+
+    <!-- My own CSS -->
     <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
 
   <body>
     <!-- Navigation List / Header -->
-    <nav class="header">
-      <!-- Nav bar will be updated later on
-        <img class="pokedex-logo" src="img/pokeball.png" height="100">
-      -->
-      <h1>Pokedex</h1>
-    </nav>
+    <header class="fixed-top">
+      <nav class="header navbar">
+        <a class="navbar-brand d-flex align-items-center" href="#">
+          <img src="img/pokeball.png" height="100" 
+          alt="Pokedex Logo">
+          Pokédex</a>
+        <form class="form-inline">
+          <input id="search-input" class="pokemon-search form-control mr-sm-2 d-flex align-items-center" type="search" placeholder="Search Pokémon" aria-label="Search">
+        </form>
+      </nav>
+    </header>
 
-    <!-- Pokedex -->
-    <div class="pokedex_container">
-      <ul class="pokemon-list"></ul>
-    </div>
-    <!-- Modal -->
-    <div id="modal-container"></div>
-    
-    <script src="js/promise-polyfill.js"></script>
+    <!-- Main -->
+    <main>
+      <!-- Pokedex -->
+      <div class="pokedex_container row">
+        <ul class="col list-group">
+          <div class = "pokemon-list row"></div>
+        </ul>
+      </div>
+      <!-- Modal -->
+      <div class="modal fade" id="pokemonModal" tabindex="-1" role="dialog" aria-labelledby="pokemonModalTitle" aria-hidden="true"> <!-- dark transparent background covering the entire screen when the modal is opened -->
+          <div class="modal-dialog" role="document"> <!-- actual modal box that appears on top of the background --> 
+            <div class="modal-content"> <!-- wrapped around all the content inside the modal -->
+                <div class="modal-header">
+                    <h5 class="modal-title" id="pokemonModalLabel"> Modal Title</h5><!--Takes Pokemon name from Java class modalTitle -->
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button> <!--event listener to hide the modal if this button is clicked--> 
+                </div> <!--Close modal header--> 
+                <div class="modal-body"> 
+                  hello
+                  <!--Pokemon Details--> 
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+          </div>
+      </div>       
+    </main>
+
+
+    <!-- Footer -->
+    <footer class="fixed-bottom">
+      <p>Find me on <a href="https://github.com/MiraKarate" target="_blank">GitHub</a> or <a href="mailto:mira.herrarte@gmail.com">Contact me!</a></p>
+    </footer>
+
+    <!-- Insert polyfills to the code -->
+    <scrpit src="js/promise-polyfill.js"></scrpit>
     <script src="js/fetch.umd.js"></script>
+    
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous">
+    </script>
+    <script 
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" 
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" 
+      crossorigin="anonymous">
+  </script>
+    <script 
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" 
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" 
+      crossorigin="anonymous">
+    </script>
+
+    <!-- My own JS -->
     <script src="js/scripts.js"></script>
   </body>
 </html>
