--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <!-- Navigation List / Header -->
+    <!-- Header (Navigation List)  -->
     <header class="fixed-top">
       <nav class="header navbar">
         <a class="navbar-brand d-flex align-items-center" href="#">
@@ -26,42 +26,57 @@
         </form>
       </nav>
     </header>
+    <!-- Close Header (Navigation List)  -->
 
     <!-- Main -->
     <main>
       <!-- Pokedex -->
-      <div class="pokedex_container row">
-        <ul class="col list-group">
-          <div class = "pokemon-list row"></div>
+      <div class="pokedex_container">
+        <ul class="list-group">
         </ul>
       </div>
+
       <!-- Modal -->
-      <div class="modal fade" id="pokemonModal" tabindex="-1" role="dialog" aria-labelledby="pokemonModalTitle" aria-hidden="true"> <!-- dark transparent background covering the entire screen when the modal is opened -->
-          <div class="modal-dialog" role="document"> <!-- actual modal box that appears on top of the background --> 
-            <div class="modal-content"> <!-- wrapped around all the content inside the modal -->
-                <div class="modal-header">
-                    <h5 class="modal-title" id="pokemonModalLabel"> Modal Title</h5><!--Takes Pokemon name from Java class modalTitle -->
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button> <!--event listener to hide the modal if this button is clicked--> 
-                </div> <!--Close modal header--> 
-                <div class="modal-body"> 
-                  hello
-                  <!--Pokemon Details--> 
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                </div>
+      <!-- dark transparent background covering the entire screen when the modal is opened -->
+      <div class="modal fade" id="pokemonModal" tabindex="-1" role="dialog" aria-labelledby="pokemonModalTitle" aria-hidden="true"> 
+
+        <!-- actual modal box that appears on top of the background --> 
+        <div class="modal-dialog" role="document"> 
+          <!-- wrapped around all the content inside the modal -->
+          <div class="modal-content"> 
+
+            <div class="modal-header">
+              <!--Takes Pokemon name from Java class modalTitle -->
+              <h5 class="modal-title" id="pokemonModalLabel">Modal title</h5>
+              <!--event listener to hide the modal if this button is clicked--> 
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+              </button> 
+              <!--Close modal header--> 
+            </div> 
+
+            <!--Pokemon Details--> 
+            <div class="modal-body">
+              ...
+            </div>
+
+            <!--Pokemon Footer--> 
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
           </div>
+        </div>
       </div>       
     </main>
+    <!-- close Modal -->
+
 
 
     <!-- Footer -->
     <footer class="fixed-bottom">
       <p>Find me on <a href="https://github.com/MiraKarate" target="_blank">GitHub</a> or <a href="mailto:mira.herrarte@gmail.com">Contact me!</a></p>
     </footer>
+    <!-- close Footer -->
 
     <!-- Insert polyfills to the code -->
     <scrpit src="js/promise-polyfill.js"></scrpit>
@@ -86,6 +101,7 @@
 
     <!-- My own JS -->
     <script src="js/scripts.js"></script>
+
   </body>
 </html>
 
