added filter function, not working yet

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           alt="Pokedex Logo">
           Pokédex</a>
         <form class="form-inline">
-          <input id="search-input" class="pokemon-search form-control mr-sm-2 d-flex align-items-center" type="search" placeholder="Search Pokémon" aria-label="Search">
+          <input id="search-input" class="pokemon-search form-control mr-sm-2 d-flex align-items-center" onkeyup="searchPokemon()" type="search" placeholder="Search Pokémon" aria-label="Search">
         </form>
       </nav>
     </header>
