--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Simple JS App</title>
 
     <!-- My own CSS -->
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="dist/styles.min.css">
   </head>
 
   <body>
@@ -22,7 +22,7 @@
           alt="Pokedex Logo">
           Pokédex</a>
         <form class="form-inline">
-          <input id="search-input" class="pokemon-search form-control mr-sm-2 d-flex align-items-center" onkeyup="searchPokemon()" type="search" placeholder="Search Pokémon" aria-label="Search">
+          <input id="search-input" class="form-control mr-sm-2 d-flex align-items-center" onkeyup="searchPokemon()" type="search" placeholder="Search Pokémon" aria-label="Search">
         </form>
       </nav>
     </header>
@@ -100,7 +100,7 @@
     </script>
 
     <!-- My own JS -->
-    <script src="js/scripts.js"></script>
+    <script src="dist/scripts.min.js"></script>
 
   </body>
 </html>
